--- a/littledog_simulation.ipynb
+++ b/littledog_simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -35,12 +35,15 @@
     "from pydrake.systems.all import LcmSubscriberSystem, LcmPublisherSystem,AbstractValue\n",
     "from pydrake.multibody.rigid_body_plant import ContactResults \n",
     "from pydrake.all import PySerializer\n",
-    "#from pydrake.all import  KinematicsResults"
+    "#from pydrake.all import  KinematicsResults\n",
+    "\n",
+    "from systems.robot_coomand_to_rigidbody_converter import RobotCommandToRigidBodyPlantConverter\n",
+    "from systems.robot_state_encoder import RobotStateEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +52,7 @@
     "from lcmt import *\n",
     "model_path = os.path.join(os.getcwd(), 'Model/LittleDog.urdf')\n",
     "\n",
-    "dt = 1e-3\n",
+    "dt = 0\n",
     "\n",
     "lcm = DrakeLcm()\n",
     "builder = DiagramBuilder()\n",
@@ -58,127 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "class RobotCommandToRigidBodyPlantConverter(LeafSystem):\n",
-    "    def __init__(self, actuators):\n",
-    "        LeafSystem.__init__(self)\n",
-    "        self.num_actuators = len(actuators)\n",
-    "        \n",
-    "        self.robot_command_port_index = self._DeclareAbstractInputPort('robot_command_port', \n",
-    "                                                                       AbstractValue.Make(littledog_command_t) ).get_index()\n",
-    "        self.desired_effort_port_indices = self._DeclareVectorOutputPort(BasicVector(self.num_actuators),\n",
-    "                                                                        self.OutputActuation).get_index()\n",
-    " \n",
-    "    def OutputActuation(self, context, output):\n",
-    "        ## OutputDesiredEffort is not equal to output command\n",
-    "        msg = self. EvalAbstractInput(context, self.robot_command_port_index).get_value()      \n",
-    "        #msg = self.EvalVectorInput(context, self.robot_command_port_index).get_value()\n",
-    "        \n",
-    "        # TODO : Considering motor model (motor effort length etc.)\n",
-    "        output_command = msg.joint_command\n",
-    "        \n",
-    "        output.SetFromVector(np.array(output_command))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "class RobotStateEncoder(LeafSystem):\n",
-    "    \"\"\"\n",
-    "    RigidBodyPlant.KinematicsResults is not found\n",
-    "    \"\"\"\n",
-    "    def __init__(self, rb_tree):\n",
-    "        LeafSystem.__init__(self)\n",
-    "        self.rb_tree = rb_tree\n",
-    "        self.num_controlled_q_ = self.rb_tree.get_num_positions()\n",
-    "\n",
-    "        # Input Port\n",
-    "        self.joint_state_results_port_index = self._DeclareInputPort( 'joint_state_results_port', PortDataType.kVectorValued,\n",
-    "                                                        self.num_controlled_q_ *2).get_index()\n",
-    "    #         self.contact_results_port_index = self._DeclareAbstractInputPort('contact_results_port', \n",
-    "    #                                                                        AbstractValue.Make(ContactResults)).get_index()\n",
-    "        # Output Port\n",
-    "        self.lcm_message_port_index = self._DeclareAbstractOutputPort('state_output_port',\n",
-    "                                                                      self.Allocator,\n",
-    "                                                                      self.OutputRobotState,\n",
-    "                                                                     ).get_index()  \n",
-    "    def Allocator(self):\n",
-    "        return AbstractValue.Make(robot_state_t)\n",
-    "    def OutputRobotState(self, context, output):\n",
-    "        #message = robot_state_t\n",
-    "#         message.timestamp = context.get_time()*1e6\n",
-    "\n",
-    "#         #contact_result = EvalAbstractInput(context, contact_results_port_index).get_value()\n",
-    "#         joint_state_result = self.EvalVectorInput(context, self.joint_state_results_port_index).get_value()\n",
-    "\n",
-    "#         message.num_joints = self.num_controlled_q_\n",
-    "#         message.joint_positon = joint_state_result[:self.num_controlled_q_]\n",
-    "#         message.joint_velocity = joint_state_result[self.num_controlled_q_:]\n",
-    "#         print(message.timestamp, message.num_joints, message.joint_positon, message.joint_velocity)\n",
-    "#         output.set_value(message)\n",
-    "\n",
-    "        message = output.get_mutable_value()\n",
-    "        message.timestamp = context.get_time()*1e6\n",
-    "\n",
-    "        #contact_result = EvalAbstractInput(context, contact_results_port_index).get_value()\n",
-    "        joint_state_result = self.EvalVectorInput(context, self.joint_state_results_port_index).get_value()\n",
-    "\n",
-    "        message.num_joints = self.num_controlled_q_\n",
-    "        message.joint_positon = joint_state_result[:self.num_controlled_q_]\n",
-    "        message.joint_velocity = joint_state_result[self.num_controlled_q_:]\n",
-    "        print(message.timestamp, message.num_joints, message.joint_positon, message.joint_velocity)\n",
-    "        output.set_value(message)\n",
-    "         \n",
-    "#         output.timestamp = context.get_time()*1e6\n",
-    "\n",
-    "#         #contact_result = EvalAbstractInput(context, contact_results_port_index).get_value()\n",
-    "#         joint_state_result = self.EvalVectorInput(context, self.joint_state_results_port_index).get_value()\n",
-    "\n",
-    "#         output.num_joints = self.num_controlled_q_\n",
-    "#         output.joint_positon = joint_state_result[:self.num_controlled_q_]\n",
-    "#         output.joint_velocity = joint_state_result[self.num_controlled_q_:]\n",
-    "#         print(output.timestamp, output.num_joints, output.joint_positon, output.joint_velocity)\n",
-    "        #output.set_value(message)\n",
-    "    def joint_state_results_port(self):\n",
-    "        return self.get_input_port(self.joint_state_results_port_index)\n",
-    "    \n",
-    "        \n",
-    "         "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +70,7 @@
        "{u'LittleDog': 0}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +105,7 @@
        "18"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,16 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,49 +149,31 @@
     "robot_state_publisher.set_name('robot_state_publisher')\n",
     "robot_state_publisher.set_publish_period(1e-3);\n",
     "\n",
-    "# Connect everything\n",
-    " \n",
+    " # Connect everything\n",
     "builder.Connect(robot_command_subscriber.get_output_port(0),\n",
-    "                robot_command_to_rigidbodyplant_converter.get_input_port(0))\n",
-    "builder.Connect(robot_command_to_rigidbodyplant_converter.get_output_port(0),\n",
+    "                robot_command_to_rigidbodyplant_converter.robot_command_input_port())\n",
+    "builder.Connect(robot_command_to_rigidbodyplant_converter.desired_effort_output_port(),\n",
     "                plant.get_input_port(0))\n",
     "builder.Connect(plant.state_output_port(),\n",
     "                visualizer_publisher.get_input_port(0))\n",
-    "builder.Connect(plant.state_output_port(), #kinematics_results_output_port(0),\n",
-    "                robot_state_encoder.joint_state_results_port())\n",
-    "builder.Connect(robot_state_encoder.get_output_port(0),\n",
+    "# builder.Connect(plant.get_output_port(0),\n",
+    "#                 visualizer_publisher.get_input_port(0))\n",
+    "\n",
+    "builder.Connect(plant.state_output_port(),\n",
+    "                robot_state_encoder.joint_state_results_input_port())\n",
+    "builder.Connect(robot_state_encoder.lcm_message_output_port(),\n",
     "                robot_state_publisher.get_input_port(0))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<member 'num_joints' of 'robot_state_t' objects>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "robot_state_t.num_joints"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "diagram = builder.Build()\n"
+    "\n"
    ]
   },
   {
@@ -343,12 +199,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "diagram = builder.Build()\n",
     "diagram_context = diagram.CreateDefaultContext()\n",
     "simulator = Simulator(diagram, diagram_context)\n",
     "simulator.set_publish_every_time_step(False)\n",
@@ -357,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {
     "collapsed": true
    },
@@ -373,45 +230,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0.0, 18, array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-      "        0.,  0.,  0.,  0.,  0.]), array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-      "        0.,  0.,  0.,  0.,  0.]))\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-310518709ef7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlcm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mStartReceiveThread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msimulator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mStepTo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msimulation_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mlcm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mStopReceiveThread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/drl/PycharmProjects/underacuatedRoboics/drake/drake-build/install/lib/python2.7/site-packages/pydrake/systems/lcm.so\u001b[0m in \u001b[0;36mSerialize\u001b[0;34m(self, value)\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lcm.StartReceiveThread()\n",
     "simulator.StepTo(simulation_time)\n",
     "lcm.StopReceiveThread()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
