little dog basic

--- a/littledog_simulation.ipynb
+++ b/littledog_simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "{u'LittleDog': 0}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 weld_x\n",
+      "1 weld_y\n",
+      "2 weld_z\n",
+      "3 weld_roll\n",
+      "4 weld_pitch\n",
+      "5 weld_yaw\n",
+      "6 front_left_hip_roll\n",
+      "7 front_left_hip_pitch\n",
+      "8 front_left_knee\n",
+      "9 front_right_hip_roll\n",
+      "10 front_right_hip_pitch\n",
+      "11 front_right_knee\n",
+      "12 back_left_hip_roll\n",
+      "13 back_left_hip_pitch\n",
+      "14 back_left_knee\n",
+      "15 back_right_hip_roll\n",
+      "16 back_right_hip_pitch\n",
+      "17 back_right_knee\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(18):\n",
+    "    print i, rb_tree.get_position_name(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rb_tree.get_num_actuators() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +160,7 @@
        "18"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,9 +171,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rb_tree.get_num_actuators()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'RobotStateEncoder' object has no attribute 'lcm_message_output_port'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-4fe4bacc48bd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     40\u001b[0m builder.Connect(plant.state_output_port(),\n\u001b[1;32m     41\u001b[0m                 robot_state_encoder.joint_state_results_input_port())\n\u001b[0;32m---> 42\u001b[0;31m builder.Connect(robot_state_encoder.lcm_message_output_port(),\n\u001b[0m\u001b[1;32m     43\u001b[0m                 robot_state_publisher.get_input_port(0))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'RobotStateEncoder' object has no attribute 'lcm_message_output_port'"
+     ]
+    }
+   ],
    "source": [
     "# RigidBodyPlant \n",
     "plant = builder.AddSystem(RigidBodyPlant(rb_tree, dt))\n",
@@ -167,13 +254,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "plant.get_num_states()\n"
    ]
   },
   {
@@ -231,7 +327,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "lcm.StartReceiveThread()\n",
