little dog test data frame

--- a/littledog_simulation.ipynb
+++ b/littledog_simulation.ipynb
@@ -131,22 +131,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12"
+       "array([ inf,  inf,  inf,  inf,  inf,  inf,  0.6,  2.4,  1. ,  0.6,  2.4,\n",
+       "        1. ,  0.6,  3.5,  3.1,  0.6,  3.5,  3.1])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rb_tree.get_num_actuators() "
+    "rb_tree.joint_limit_max"
    ]
   },
   {
@@ -171,22 +172,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "centerOfMass(): incompatible function arguments. The following argument types are supported:\n    1. (self: pydrake.multibody.rigid_body_tree.RigidBodyTree, cache: KinematicsCache<double>, model_instance_id_set: Set[int] = set([0])) -> numpy.ndarray[float64[3, 1]]\n    2. (self: pydrake.multibody.rigid_body_tree.RigidBodyTree, cache: KinematicsCache<Eigen::AutoDiffScalar<Eigen::Matrix<double, -1, 1, 0, -1, 1> > >, model_instance_id_set: Set[int] = set([0])) -> numpy.ndarray[object[3, 1]]\n\nInvoked with: <pydrake.multibody.rigid_body_tree.RigidBodyTree object at 0x7f2dfaf607b0>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-649eeee917a0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrb_tree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcenterOfMass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: centerOfMass(): incompatible function arguments. The following argument types are supported:\n    1. (self: pydrake.multibody.rigid_body_tree.RigidBodyTree, cache: KinematicsCache<double>, model_instance_id_set: Set[int] = set([0])) -> numpy.ndarray[float64[3, 1]]\n    2. (self: pydrake.multibody.rigid_body_tree.RigidBodyTree, cache: KinematicsCache<Eigen::AutoDiffScalar<Eigen::Matrix<double, -1, 1, 0, -1, 1> > >, model_instance_id_set: Set[int] = set([0])) -> numpy.ndarray[object[3, 1]]\n\nInvoked with: <pydrake.multibody.rigid_body_tree.RigidBodyTree object at 0x7f2dfaf607b0>"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12"
+       "array([  0.00000000e+00,   1.84048209e-04,   4.90467434e-01])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rb_tree.get_num_actuators()"
+    " \n",
+    "q= rb_tree.getZeroConfiguration()\n",
+    "cache = rb_tree.doKinematics(q)\n",
+    "rb_tree.centerOfMass(cache)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rb_tree.g"
    ]
   },
   {
